# py4godot_on_android

./: android.cross  meson.build
cython_example/: foo.pxd  foo.pyx
example/: gdnode.gd  gdnode.gd.uid  node_3d.tscn  project.godot  python.gdextension  python.gdextension.uid
src/: main.cpp  pythonscript.cpp
